Time: 7 ms (25.97%), Space: 45.1 MB (5.22%) - LeetHub